--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 
 <html>
     <h1>
-        Hey, I'm NetworkChuck
+        Hey, I'm Zane, programmer.
     </h1>
     <body>
-        <h2>About me</h2>
+        <h2>  Beehive IoT</h2>
         <p>
-            I am a coffee addict who makes vidoes sometimes.
+          
+           The  solar panel voltmeter was created using knowledge of Arduino code and circuitry,
+            transmittance of data achieved through an Arduino Bluetooth Low Energy library which sent the data to the LightBlue app, 
+            which forwarded the data to the final display, Adafruit IO. Used Kicad to create sketches of project components ** EDIT LATER
+            A knowledge of troubleshooting was the greatest takeaway from this project, as many apparently simple errors were not as easily resolved as expected. 
+
         </p>
-        <h2>What I'm working on</h2>
+        <h2>Nuclear Security Aggies Invent</h2>
         <p>
-            I'm obsessed with AI right now and I'm working on the CPTS from HTB.
+            Collaborated with undergrad team to create a product for determining specific resonance frequencies for different materials using non-contact excitation, splitresponsibility for the pitch video. 
+            Examined current Resonance Ultrasound Spectroscopy methods with the help of the Los Alamos National Laboratories(LANL) faculty and postdoc researchers
+        </p>
+        <h2>Insect AI</h2>
+        <p>
+            Worked through tutorials on linear regression, Support Vector Machine, and K-Nearest Neighbors algorithms. 
+            Configured a Tensorflow convolutional neuralnetwork using Keras to classify spider, tick, and mosquito bites (>80% accuracy)
+            -TrenchantDroneOps/InsectAI (github.com)
+        </p>
+        <h2>TAMU Datathon</h2>
+        <p>
+            Worked on beautifulsoup module in python for webscraping
+        </p>
+         <h2>TAMUHack</h2>
+        <p>
+            The greatest achievement in the Raspberry Pi car that recognized people was triggering the motors in a specific fashion when a person was detected, 
+            even though this breakthrough only required a few lines of code. 
+            An Arduino was connected to the motor controllers, a Raspberry Pi controlled the Arduino through serial communication, and the Raspberry Pi accepted input from a Picamera module. 
+            The Raspberry Pi utilized a basic Tensorflow object detection algorithm able to determine between electronic devices, chairs, people, etc. with more than a dozen categories for classification. 
+            The Tensorflow algorithm processed the camera data, and when a person was detected, serial communication was used to run corresponding Arduino C++ code to run the motors. 
+
         </p>
     </body>
 </html>
